# logq

./: .gitmodules  .todo  CMakeLists.txt  Manifest.toml  debug.lp  readme.md
automation/: debug.yaml  inventory.hosts.yaml  inventory.hosts.yml  users_create.yaml
automation/group_vars/new/: vars  vault
blackbox/: Project.toml  debug.lp  main.jl
blackbox/src/: InstanceSchema.jl  Logq.jl
instances/: instance.shema.json  mini_teste.txt  teste  teste.json
src/: InstanceReader.jl  Model.jl  main.cpp
